# OS_Labs

Colloquium/: README.md
Colloquium/src/: fib.js  index.html  list.js  palind.js
Lab1/Lab1/: CMakeLists.txt
Lab1/Lab1/src/creator/: creator.cpp
Lab1/Lab1/src/main/: main.cpp
Lab1/Lab1/src/reporter/: reporter.cpp
Lab1/Lab1/test/: tests.cpp
Lab1/Lab1/tests/: lab_tests.cpp
Lab1_1/: CMakeLists.txt
Lab1_1/src/creator/: creator.cpp  creator.h
Lab1_1/src/header/: header.h
Lab1_1/src/main/: main.cpp  main.h
Lab1_1/src/reporter/: reporter.cpp  reporter.h
Lab1_1/tests/: creator_test.cpp  main_test.cpp  reporter_test.cpp
Lab2/: CMakeLists.txt  Lab2.cpp  Lab2.h
Lab2/17/: main.cpp  main.h
Lab2/17/test/: test.cpp
Lab2/98/: main.cpp  main.h
Lab2/98/test/: test.cpp
Lab3/: CMakeLists.txt
Lab3/src/: main.cpp  main.h
Lab4/: CMakeLists.txt
Lab4/Lab4/: CMakeLists.txt
Lab4/Lab4/include/: header.h  message_utils.h
Lab4/Lab4/src/: message_utils.cpp  receiver.cpp  sender.cpp
Lab4/Lab4/tests/: message_tests.cpp
Lab5/: CMakeLists.txt
Lab5/include/: common.h
Lab5/src/: client.cpp  server.cpp
Lab5/tests/: test_server.cpp
